# serde-cursor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
impl/src/: lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: compile_error.rs  const_str.rs  lib.rs  path.rs
src/: const_str.rs  de.rs  field.rs  lib.rs  path_segment.rs  sequence.rs  ser.rs
tests/: borrow.rs  error.rs  interpolation.rs  roundtrip.rs  serde_with.rs  test.rs  tests.rs  wildcard.rs
tests/ui/: double_colon.rs  double_colon.stderr  empty.rs  empty.stderr  huge_index.rs  huge_index.stderr  invalid_literal.rs  invalid_literal.stderr  invalid_token.rs  invalid_token.stderr  missing_generic.rs  missing_generic.stderr  missing_path.rs  missing_path.stderr  missing_rest_of_path.rs  missing_rest_of_path.stderr  trailing_dot.rs  trailing_dot.stderr  trailing_punct.rs  trailing_punct.stderr  unexpected_colon.rs  unexpected_colon.stderr
