resolver = "2"

[package]
name = "serde_cursor"
version.workspace = true
edition.workspace = true
# rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_core = "1.0.228"
serde_cursor_impl = { path = "impl" }

[workspace.package]
version = "0.1.0"
description = "serde cursor"
license = "MIT OR Apache-2.0"
edition = "2024"
# edition = "2021"
# rust-version = "1.75"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/serde-cursor"
# keywords = ["macros", "derive", "alias", "macro_rules_attribute", "proc-macro"]
# categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc", "rust-patterns"]

[dev-dependencies]
monostate = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.149"

[workspace]
members = [".", "impl"]
