[package]
name = "serde_cursor_impl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "implementation detail of the serde_cursor crate"
repository.workspace = true
license.workspace = true

[package.metadata.release]
tag = false

[lib]
proc-macro = true

[dependencies]
litrs = "1.0.0"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_core = "1.0.228"
serde_json = "1.0.149"
serde-query = "0.2.0"
toml = "1.0"
